// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EsAccordion <EsAccordionList /> 1`] = `"<div role="tablist" class="es-accordion-list es-accordion-list--default"></div>"`;

exports[`EsAccordion EsAccordionList expands one item and collapses another 1`] = `
"<div role="tablist" class="es-accordion-list es-accordion-list--default">
  <div role="tab" class="es-accordion es-accordion--default">
    <header class="position-relative"><button class="es-accordion-button position-absolute w-100 h-100 border-0 bg-transparent"><span class="sr-only">expand</span></button>
      <h3 class="es-accordion-heading mb-0 align-items-center d-flex font-weight-bold justify-content-between py-100 font-size-100 px-100 px-sm-200">My Title 1 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="height: 24px; width: 24px;" class="es-accordion-icon flex-shrink-0 ml-200">
          <path fill-rule="evenodd" clip-rule="evenodd" d="M3.293 8.293a1 1 0 0 1 1.414 0L12 15.586l7.293-7.293a1 1 0 1 1 1.414 1.414l-8 8a1 1 0 0 1-1.414 0l-8-8a1 1 0 0 1 0-1.414Z"></path>
        </svg></h3>
    </header>
    <transition-stub css="true" enterclass="" leaveclass="collapse show" entertoclass="collapse show" leavetoclass="collapse" enteractiveclass="collapsing" leaveactiveclass="collapsing" role="tabpanel" tabindex="0">
      <div id="accordion-id-1" class="collapse" style="display: none;">
        <div class="es-accordion-content pb-25 bg-white pt-100 px-100 px-sm-200">
          <p>My content 1.</p>
        </div>
      </div>
    </transition-stub>
  </div>
  <div role="tab" class="es-accordion es-accordion--default expanded">
    <header class="position-relative"><button class="es-accordion-button position-absolute w-100 h-100 border-0 bg-transparent"><span class="sr-only">collapse</span></button>
      <h3 class="es-accordion-heading mb-0 align-items-center d-flex font-weight-bold justify-content-between py-100 es-accordion-heading--visible font-size-100 px-100 px-sm-200">My Title 2 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="height: 24px; width: 24px;" class="es-accordion-icon flex-shrink-0 ml-200">
          <path fill-rule="evenodd" clip-rule="evenodd" d="M3.293 8.293a1 1 0 0 1 1.414 0L12 15.586l7.293-7.293a1 1 0 1 1 1.414 1.414l-8 8a1 1 0 0 1-1.414 0l-8-8a1 1 0 0 1 0-1.414Z"></path>
        </svg></h3>
    </header>
    <transition-stub css="true" enterclass="" leaveclass="collapse show" entertoclass="collapse show" leavetoclass="collapse" enteractiveclass="collapsing" leaveactiveclass="collapsing" role="tabpanel" tabindex="0">
      <div id="accordion-id-2" class="collapse show">
        <div class="es-accordion-content pb-25 bg-white pt-100 px-100 px-sm-200">
          <p>My content 2.</p>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`EsAccordion EsAccordionList mounts with initial expand; collapse also works 1`] = `
"<div role="tablist" class="es-accordion-list es-accordion-list--default">
  <div role="tab" class="es-accordion es-accordion--default expanded">
    <header class="position-relative"><button class="es-accordion-button position-absolute w-100 h-100 border-0 bg-transparent"><span class="sr-only">collapse</span></button>
      <h3 class="es-accordion-heading mb-0 align-items-center d-flex font-weight-bold justify-content-between py-100 es-accordion-heading--visible font-size-100 px-100 px-sm-200">My Title <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="height: 24px; width: 24px;" class="es-accordion-icon flex-shrink-0 ml-200">
          <path fill-rule="evenodd" clip-rule="evenodd" d="M3.293 8.293a1 1 0 0 1 1.414 0L12 15.586l7.293-7.293a1 1 0 1 1 1.414 1.414l-8 8a1 1 0 0 1-1.414 0l-8-8a1 1 0 0 1 0-1.414Z"></path>
        </svg></h3>
    </header>
    <transition-stub css="true" enterclass="" leaveclass="collapse show" entertoclass="collapse show" leavetoclass="collapse" enteractiveclass="collapsing" leaveactiveclass="collapsing" role="tabpanel" tabindex="0">
      <div id="accordion-id" class="collapse show">
        <div class="es-accordion-content pb-25 bg-white pt-100 px-100 px-sm-200">
          <p>My content.</p>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`EsAccordion EsAccordionList performs multi-expand correctly 1`] = `
"<div role="tablist" class="es-accordion-list es-accordion-list--default">
  <div role="tab" class="es-accordion es-accordion--default expanded">
    <header class="position-relative"><button class="es-accordion-button position-absolute w-100 h-100 border-0 bg-transparent"><span class="sr-only">collapse</span></button>
      <h3 class="es-accordion-heading mb-0 align-items-center d-flex font-weight-bold justify-content-between py-100 es-accordion-heading--visible font-size-100 px-100 px-sm-200">My Title 1 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="height: 24px; width: 24px;" class="es-accordion-icon flex-shrink-0 ml-200">
          <path fill-rule="evenodd" clip-rule="evenodd" d="M3.293 8.293a1 1 0 0 1 1.414 0L12 15.586l7.293-7.293a1 1 0 1 1 1.414 1.414l-8 8a1 1 0 0 1-1.414 0l-8-8a1 1 0 0 1 0-1.414Z"></path>
        </svg></h3>
    </header>
    <transition-stub css="true" enterclass="" leaveclass="collapse show" entertoclass="collapse show" leavetoclass="collapse" enteractiveclass="collapsing" leaveactiveclass="collapsing" role="tabpanel" tabindex="0">
      <div id="accordion-id-1" class="collapse show">
        <div class="es-accordion-content pb-25 bg-white pt-100 px-100 px-sm-200">
          <p>My content 1.</p>
        </div>
      </div>
    </transition-stub>
  </div>
  <div role="tab" class="es-accordion es-accordion--default">
    <header class="position-relative"><button class="es-accordion-button position-absolute w-100 h-100 border-0 bg-transparent"><span class="sr-only">expand</span></button>
      <h3 class="es-accordion-heading mb-0 align-items-center d-flex font-weight-bold justify-content-between py-100 font-size-100 px-100 px-sm-200">My Title 2 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="height: 24px; width: 24px;" class="es-accordion-icon flex-shrink-0 ml-200">
          <path fill-rule="evenodd" clip-rule="evenodd" d="M3.293 8.293a1 1 0 0 1 1.414 0L12 15.586l7.293-7.293a1 1 0 1 1 1.414 1.414l-8 8a1 1 0 0 1-1.414 0l-8-8a1 1 0 0 1 0-1.414Z"></path>
        </svg></h3>
    </header>
    <transition-stub css="true" enterclass="" leaveclass="collapse show" entertoclass="collapse show" leavetoclass="collapse" enteractiveclass="collapsing" leaveactiveclass="collapsing" role="tabpanel" tabindex="0">
      <div id="accordion-id-2" class="collapse" style="display: none;">
        <div class="es-accordion-content pb-25 bg-white pt-100 px-100 px-sm-200">
          <p>My content 2.</p>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`EsAccordion EsAccordionList v-model test 1`] = `
"<div role="tablist" class="es-accordion-list es-accordion-list--default" data-testid="testInput" id="testId">
  <div role="tab" class="es-accordion es-accordion--default expanded">
    <header class="position-relative"><button class="es-accordion-button position-absolute w-100 h-100 border-0 bg-transparent"><span class="sr-only">collapse</span></button>
      <h3 class="es-accordion-heading mb-0 align-items-center d-flex font-weight-bold justify-content-between py-100 es-accordion-heading--visible font-size-100 px-100 px-sm-200">
        My Title 1
        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="height: 24px; width: 24px;" class="es-accordion-icon flex-shrink-0 ml-200">
          <path fill-rule="evenodd" clip-rule="evenodd" d="M3.293 8.293a1 1 0 0 1 1.414 0L12 15.586l7.293-7.293a1 1 0 1 1 1.414 1.414l-8 8a1 1 0 0 1-1.414 0l-8-8a1 1 0 0 1 0-1.414Z"></path>
        </svg></h3>
    </header>
    <transition-stub css="true" enterclass="" leaveclass="collapse show" entertoclass="collapse show" leavetoclass="collapse" enteractiveclass="collapsing" leaveactiveclass="collapsing" role="tabpanel" tabindex="0">
      <div id="accordion-id-1" class="collapse show">
        <div class="es-accordion-content pb-25 bg-white pt-100 px-100 px-sm-200">
          <p>My content 1.</p>
        </div>
      </div>
    </transition-stub>
  </div>
  <div role="tab" class="es-accordion es-accordion--default">
    <header class="position-relative"><button class="es-accordion-button position-absolute w-100 h-100 border-0 bg-transparent"><span class="sr-only">expand</span></button>
      <h3 class="es-accordion-heading mb-0 align-items-center d-flex font-weight-bold justify-content-between py-100 font-size-100 px-100 px-sm-200">
        My Title 2
        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="height: 24px; width: 24px;" class="es-accordion-icon flex-shrink-0 ml-200">
          <path fill-rule="evenodd" clip-rule="evenodd" d="M3.293 8.293a1 1 0 0 1 1.414 0L12 15.586l7.293-7.293a1 1 0 1 1 1.414 1.414l-8 8a1 1 0 0 1-1.414 0l-8-8a1 1 0 0 1 0-1.414Z"></path>
        </svg></h3>
    </header>
    <transition-stub css="true" enterclass="" leaveclass="collapse show" entertoclass="collapse show" leavetoclass="collapse" enteractiveclass="collapsing" leaveactiveclass="collapsing" role="tabpanel" tabindex="0">
      <div id="accordion-id-2" class="collapse" style="display: none;">
        <div class="es-accordion-content pb-25 bg-white pt-100 px-100 px-sm-200">
          <p>My content 2.</p>
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;
